--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="header-bg">
     <div class="header container">
-      <a href="./"><img src="_img/logo-um-bit-criativo.svg" alt="Logo tipo Um Bit Criativo"></a>
+      <a href="./"><img width="210" height="36" src="_img/logo-um-bit-criativo.svg" alt="Logo tipo Um Bit Criativo"></a>
       <nav aria-label="primário">
         <ul class="header-menu link">
           <li><a class="ativo" href="#">Início</a></li>
@@ -43,6 +43,19 @@
       </picture>
     </div>
   </main>
+
+  <article class="sobre-bg">
+    <div class="sobre container">
+      <h1 class="titulo cp1">Conheça a #1Bit</h1>
+      <p class="texto-2 n2">A UmBitCriativo é uma agência de marketing digital com mais de 20 anos de experiência no mercado de comunicação.</p>
+      <ul class="texto-b n2 sobre-numeros">
+        <li><span class="texto-2">+50</span> Clientes Atendidos</li>
+        <li><span class="texto-2">+100</span> IDs Criadas</li>
+        <li><span class="texto-2">+150</span> Dites Desenvolvidas</li>
+        <li><span class="texto-2">+15</span> Contas Gerenciadas</li>
+      </ul>
+    </div>
+  </article>
 
   <script src="/_js/menu.js"></script>
 </body>
