--- a/index.html
+++ b/index.html
@@ -57,6 +57,43 @@
     </div>
   </article>
 
-  <script src="/_js/menu.js"></script>
+  <article class="servicos container">
+      <h1 class="titulo cp2">O que nós fazemos</h1>
+      <ul class="servicos-lista">
+        <li class="servicos-item">
+          <h2 class="subtitulo cp2">Web Design</h2>
+          <img src="/_img/search.svg">
+          <p class="texto">Desenvolvimento de sites profissionais, ecommerces, blogs e landing pages. <span class="texto-b cp1-b">Projetos modernos e responsivos!</span></p>
+        </li>
+        <li class="servicos-item">
+          <h2 class="subtitulo cp2">Design Gráfico</h2>
+          <img src="/_img/search.svg">
+          <p class="texto">Criação de Identidade Visual, banners, rótulos, estampas, ilustrações, vídeos e etc. <span class="texto-b cp1-b">Dê vida à sua ideia!</span></p>
+        </li>
+        <li class="servicos-item">
+          <h2 class="subtitulo cp2">Social Media</h2>
+          <img src="/_img/search.svg">
+          <p class="texto">Gerenciamento de redes sociais, planejamento estratético e execução. <span class="texto-b cp1-b">Interaja com seus clientes!</span></p>
+        </li>
+        <li class="servicos-item">
+          <h2 class="subtitulo cp2">Copywriter</h2>
+          <img src="/_img/search.svg">
+          <p class="texto">Produção de roteiros e textos publicitários como slogans, email marketing, sites e etc. <span class="texto-b cp1-b">Copy persuasiva para conversão!</span></p>
+        </li>
+        <li class="servicos-item">
+          <h2 class="subtitulo cp2">Gestão de Tráfego</h2>
+          <img src="/_img/search.svg">
+          <p class="texto">Elaboração e execução de estratégias de tráfego, gestão de leads e funil de vendas. <span class="texto-b cp1-b">Tráfego pago e orgânico!</span></p>
+        </li>
+        <li class="servicos-item">
+          <h2 class="subtitulo cp2">SEO</h2>
+          <img src="/_img/search.svg">
+          <p class="texto">Otimização de sites para aparecer nas primeiras páginas dos sistema de busca. <span class="texto-b cp1-b">Torne seu site visível no Google e Bing!</span></p>
+        </li>
+      </ul>
+  </article>
+
+  <script src="/_js/menu-scroll.js"></script>
+  <script src="/_js/menu-mobile.js"></script>
 </body>
 </html>
