--- a/index.html
+++ b/index.html
@@ -93,6 +93,69 @@
       </ul>
   </article>
 
+  <section class="portfolio-bg" aria-label="Portfólio">
+    <div class="portfolio">
+      <h1 class="titulo cp1-b">Portfólio</h1>
+      <ul class="portfolio-list">
+        <li class="portfolio-item">
+          <a href="#">
+            <div class="portfolio-title">
+              <h2 class="subtitulo n2">Projeto 1</h2>
+              <p class="texto c9">Web Design</p>
+            </div>
+          </a>
+          <div class="portfolio-img">
+            <img src="./_img/projetoX.jpg" alt="">
+          </div>
+        </li>
+        <li class="portfolio-item">
+          <a href="#">
+            <div class="portfolio-title">
+              <h2 class="subtitulo n2">Projeto 1</h2>
+              <p class="texto c9">Web Design</p>
+            </div>
+          </a>
+          <div class="portfolio-img">
+            <img src="./_img/projetoX.jpg" alt="">
+          </div>
+        </li>
+        <li class="portfolio-item">
+          <a href="#">
+            <div class="portfolio-title">
+              <h2 class="subtitulo n2">Projeto 1</h2>
+              <p class="texto c9">Web Design</p>
+            </div>
+          </a>
+          <div class="portfolio-img">
+            <img src="./_img/projetoX.jpg" alt="">
+          </div>
+        </li>
+        <li class="portfolio-item">
+          <a href="#">
+            <div class="portfolio-title">
+              <h2 class="subtitulo n2">Projeto 1</h2>
+              <p class="texto c9">Web Design</p>
+            </div>
+          </a>
+          <div class="portfolio-img">
+            <img src="./_img/projetoX.jpg" alt="">
+          </div>
+        </li>
+        <li class="portfolio-item">
+          <a href="#">
+            <div class="portfolio-title">
+              <h2 class="subtitulo n2">Projeto 1</h2>
+              <p class="texto c9">Web Design</p>
+            </div>
+          </a>
+          <div class="portfolio-img">
+            <img src="./_img/projetoX.jpg" alt="">
+          </div>
+        </li>
+      </ul>
+    </div>
+  </section>
+
   <script src="/_js/menu-scroll.js"></script>
   <script src="/_js/menu-mobile.js"></script>
 </body>
