--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
   <article class="sobre-bg">
     <div class="sobre container">
-      <h1 class="titulo cp1">Conheça a #1Bit</h1>
+      <h1 class="titulo-b cp1">Conheça a #1Bit</h1>
       <p class="texto-2 n2">A UmBitCriativo é uma agência de marketing digital com mais de 20 anos de experiência no mercado de comunicação.</p>
       <ul class="texto-b n2 sobre-numeros">
         <li><span class="texto-2">+50</span> Clientes Atendidos</li>
@@ -58,44 +58,44 @@
   </article>
 
   <article class="servicos container">
-      <h1 class="titulo cp2">O que nós fazemos</h1>
+      <h1 class="titulo-b cp2">O que nós fazemos</h1>
       <ul class="servicos-lista">
         <li class="servicos-item">
           <h2 class="subtitulo cp2">Web Design</h2>
-          <img src="/_img/search.svg">
+          <img src="/_img/icons/web-design.svg">
           <p class="texto">Desenvolvimento de sites profissionais, ecommerces, blogs e landing pages. <span class="texto-b cp1-b">Projetos modernos e responsivos!</span></p>
         </li>
         <li class="servicos-item">
           <h2 class="subtitulo cp2">Design Gráfico</h2>
-          <img src="/_img/search.svg">
+          <img src="/_img/icons/design-grafico.svg">
           <p class="texto">Criação de Identidade Visual, banners, rótulos, estampas, ilustrações, vídeos e etc. <span class="texto-b cp1-b">Dê vida à sua ideia!</span></p>
         </li>
         <li class="servicos-item">
           <h2 class="subtitulo cp2">Social Media</h2>
-          <img src="/_img/search.svg">
+          <img src="/_img/icons/socila-media.svg">
           <p class="texto">Gerenciamento de redes sociais, planejamento estratético e execução. <span class="texto-b cp1-b">Interaja com seus clientes!</span></p>
         </li>
         <li class="servicos-item">
-          <h2 class="subtitulo cp2">Copywriter</h2>
-          <img src="/_img/search.svg">
-          <p class="texto">Produção de roteiros e textos publicitários como slogans, email marketing, sites e etc. <span class="texto-b cp1-b">Copy persuasiva para conversão!</span></p>
+          <h2 class="subtitulo cp2">Copy / Redação</h2>
+          <img src="/_img/icons/copy.svg">
+          <p class="texto">Produção de roteiros e textos publicitários para slogans, email marketing, sites e etc. <span class="texto-b cp1-b">Copy persuasiva para conversão!</span></p>
         </li>
         <li class="servicos-item">
           <h2 class="subtitulo cp2">Gestão de Tráfego</h2>
-          <img src="/_img/search.svg">
+          <img src="/_img/icons/ads.svg">
           <p class="texto">Elaboração e execução de estratégias de tráfego, gestão de leads e funil de vendas. <span class="texto-b cp1-b">Tráfego pago e orgânico!</span></p>
         </li>
         <li class="servicos-item">
           <h2 class="subtitulo cp2">SEO</h2>
-          <img src="/_img/search.svg">
-          <p class="texto">Otimização de sites para aparecer nas primeiras páginas dos sistema de busca. <span class="texto-b cp1-b">Torne seu site visível no Google e Bing!</span></p>
+          <img src="/_img/icons/seo.svg">
+          <p class="texto">Otimização de sites para aparecer nas primeiras páginas dos sistema de busca. <span class="texto-b cp1-b">Sua marca visível no Google e Bing!</span></p>
         </li>
       </ul>
   </article>
 
   <section class="portfolio-bg" aria-label="Portfólio">
     <div class="portfolio">
-      <h1 class="titulo cp1-b">Portfólio</h1>
+      <h1 class="titulo-b cp1-b">Portfólio</h1>
       <ul class="portfolio-list">
         <li class="portfolio-item">
           <a href="#">
@@ -155,6 +155,58 @@
       </ul>
     </div>
   </section>
+
+  <article class="team-bg">
+    <div class="team container">
+      <h1 class="titulo-b n2">Nosso Time</h1>
+      <ul class="team-list">
+        <li class="team-item">
+          <a href="#">
+            <div class="team-txt">
+              <span class="texto c9">Web Designer</span>
+              <h2 class="texto-b n2">Franciel Ferreira</h2>
+            </div>
+          </a>
+          <div class="team-img">
+            <img src="/_img/team-person.jpg" alt="Franciel Ferreira Web Designer">
+          </div>
+        </li>
+        <li class="team-item">
+          <a href="#">
+            <div class="team-txt">
+              <span class="texto c9">Designer Gráfico</span>
+              <h2 class="texto-b n2">Lucas Almeida</h2>
+            </div>
+          </a>
+          <div class="team-img">
+            <img src="/_img/team-person.jpg" alt="Franciel Ferreira Web Designer">
+          </div>
+        </li>
+        <li class="team-item">
+          <a href="#">
+            <div class="team-txt">
+              <span class="texto c9">Social Media</span>
+              <h2 class="texto-b n2">Sarah Penelópe</h2>
+            </div>
+          </a>
+          <div class="team-img">
+            <img src="/_img/team-person.jpg" alt="Franciel Ferreira Web Designer">
+          </div>
+        </li>
+        <li class="team-item">
+          <a href="#">
+            <div class="team-txt">
+              <span class="texto c9">Copywryter</span>
+              <h2 class="texto-b n2">César Cavalcante</h2>
+            </div>
+          </a>
+          <div class="team-img">
+            <img src="/_img/team-person.jpg" alt="Franciel Ferreira Web Designer">
+          </div>
+        </li>
+      </ul>
+    </div>
+  </article>
 
   <script src="/_js/menu-scroll.js"></script>
   <script src="/_js/menu-mobile.js"></script>
