--- a/index.html
+++ b/index.html
@@ -208,6 +208,29 @@
     </div>
   </article>
 
+  <section class="parceiros-bg" aria-label="Nossos parceiros">
+    <ul class="parceiros-list">
+      <li class="parceiros-item">
+        <img src="/_img/logo-um-bit-criativo.svg" alt="Logo">
+      </li>
+      <li class="parceiros-item">
+        <img src="/_img/logo-um-bit-criativo.svg" alt="Logo">
+      </li>
+      <li class="parceiros-item">
+        <img src="/_img/logo-um-bit-criativo.svg" alt="Logo">
+      </li>
+      <li class="parceiros-item">
+        <img src="/_img/logo-um-bit-criativo.svg" alt="Logo">
+      </li>
+      <li class="parceiros-item">
+        <img src="/_img/logo-um-bit-criativo.svg" alt="Logo">
+      </li>
+      <li class="parceiros-item">
+        <img src="/_img/logo-um-bit-criativo.svg" alt="Logo">
+      </li>
+    </ul>
+  </section>
+
   <script src="/_js/menu-scroll.js"></script>
   <script src="/_js/menu-mobile.js"></script>
 </body>
