--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
       <a href="./"><img width="210" height="36" src="_img/logo-um-bit-criativo.svg" alt="Logo tipo Um Bit Criativo"></a>
       <nav aria-label="primário">
         <ul class="header-menu link">
-          <li><a class="ativo" href="#">Início</a></li>
-          <li><a href="#">Sobre</a></li>
-          <li><a href="#">Serviços</a></li>
-          <li><a href="#">Portfólio</a></li>
-          <li><a href="#">Equipe</a></li>
-          <li><a href="#">Clientes</a></li>
-          <li><a href="#">Contato</a></li>
+          <li><a class="ativo" href="#home">Início</a></li>
+          <li><a href="#sobre">Sobre</a></li>
+          <li><a href="#servicos">Serviços</a></li>
+          <li><a href="#portfolio">Portfólio</a></li>
+          <li><a href="#equipe">Equipe</a></li>
+          <li><a href="#clientes">Clientes</a></li>
+          <li><a href="#contato">Contato</a></li>
         </ul>
         <div class="search">
           <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -36,7 +36,7 @@
     </div>
   </header>
 
-  <main class="hero-bg">
+  <main class="hero-bg" id="home">
     <div class="hero container">
       <div class="hero-conteudo">
         <h1 class="titulo c1">Agência Digital</h1>
@@ -50,7 +50,7 @@
     </div>
   </main>
 
-  <article class="sobre-bg">
+  <article class="sobre-bg" id="sobre">
     <div class="sobre container">
       <h1 class="titulo-b cp1">Conheça a #1Bit</h1>
       <p class="texto-2 n2">A UmBitCriativo é uma agência de marketing digital com mais de 20 anos de experiência no mercado de comunicação.</p>
@@ -63,7 +63,7 @@
     </div>
   </article>
 
-  <article class="servicos container">
+  <article class="servicos container" id="servicos">
       <h1 class="titulo-b cp2">O que nós fazemos</h1>
       <ul class="servicos-lista">
         <li class="servicos-item">
@@ -125,7 +125,7 @@
       </ul>
   </article>
 
-  <section class="portfolio-bg" aria-label="Portfólio">
+  <section class="portfolio-bg" id="portfolio" aria-label="Portfólio">
     <div class="portfolio">
       <h1 class="titulo-b cp1-b">Portfólio</h1>
       <ul class="portfolio-list">
@@ -188,7 +188,7 @@
     </div>
   </section>
 
-  <article class="team-bg">
+  <article class="team-bg" id="equipe">
     <div class="team container">
       <h1 class="titulo-b n2">Nosso Time</h1>
       <ul class="team-list">
@@ -240,7 +240,7 @@
     </div>
   </article>
 
-  <section class="parceiros-bg" aria-label="Nossos parceiros">
+  <section class="parceiros-bg" id="clientes" aria-label="Nossos parceiros">
     <ul class="parceiros-list">
       <li class="parceiros-item">
         <img src="/_img/logo-um-bit-criativo.svg" alt="Logo">
@@ -263,7 +263,7 @@
     </ul>
   </section>
 
-  <article class="contato-bg">
+  <article class="contato-bg" id="contato">
     <h1 class="titulo-b c10">Fale Conosco</h1>
     <div class="contato container">
       <section class="contato-dados">
