--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Agência de marketing digital com mais de 20 anos de experiência no mercado de comunicação">
   <title>UmBitCriativo</title>
+  <script>
+    document.documentElement.className += ' js';
+    //verifica se o usuario está com JavaScript habilitado no browser
+  </script>
   <!-- fonts
     <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -327,5 +331,7 @@
 
   <script src="/_js/menu-scroll.js"></script>
   <script src="/_js/menu-mobile.js"></script>
+  <script src="/_js/equipe.js"></script>
+  <script src="/_js/numero-relevante.js"></script>
 </body>
 </html>
