--- a/index.html
+++ b/index.html
@@ -22,13 +22,11 @@
       <a href="./"><img width="210" height="36" src="_img/logo-um-bit-criativo.svg" alt="Logo tipo Um Bit Criativo"></a>
       <nav aria-label="primário">
         <ul class="header-menu link">
-          <li><a class="ativo" href="#home">Início</a></li>
-          <li><a href="#sobre">Sobre</a></li>
-          <li><a href="#servicos">Serviços</a></li>
-          <li><a href="#portfolio">Portfólio</a></li>
-          <li><a href="#equipe">Equipe</a></li>
-          <li><a href="#clientes">Clientes</a></li>
-          <li><a href="#contato">Contato</a></li>
+          <li><a class="ativo" href="./">Início</a></li>
+          <li><a href="/sobre.html">Sobre</a></li>
+          <li><a href="/servicos.html">Serviços</a></li>
+          <li><a href="/portfolio.html">Portfólio</a></li>
+          <li><a href="/contato.html">Contato</a></li>
         </ul>
         <div class="search">
           <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
