--- a/sobre.html
+++ b/sobre.html
@@ -24,11 +24,9 @@
         <ul class="header-menu link">
           <li><a class="ativo" href="./">Início</a></li>
           <li><a href="/sobre.html">Sobre</a></li>
-          <li><a href="#servicos">Serviços</a></li>
-          <li><a href="#portfolio">Portfólio</a></li>
-          <li><a href="#equipe">Equipe</a></li>
-          <li><a href="#clientes">Clientes</a></li>
-          <li><a href="#contato">Contato</a></li>
+          <li><a href="/servicos.html">Serviços</a></li>
+          <li><a href="/portfolio.html">Portfólio</a></li>
+          <li><a href="/contato.html">Contato</a></li>
         </ul>
         <div class="search">
           <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
