--- a/contato.html
+++ b/contato.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="_css/style.css">
 </head>
 
-<body>
+<body id="contato">
   <header class="header-bg">
     <div class="header container">
       <a href="./"><img width="210" height="36" src="_img/logo-um-bit-criativo.svg" alt="Logo tipo Um Bit Criativo"></a>
@@ -31,7 +31,7 @@
           <li><a href="/contato.html">Contato</a></li>
         </ul>
         <div class="search">
-          <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg width="20" height="20" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
             <path id="search-lupa" d="M8.33329 3.33333C7.00721 3.33333 5.73544 3.86012 4.79776 4.7978C3.86008 5.73548 3.33329 7.00725 3.33329 8.33333C3.33329 9.65942 3.86008 10.9312 4.79776 11.8689C5.73544 12.8065 7.00721 13.3333 8.33329 13.3333C9.65937 13.3333 10.9311 12.8065 11.8688 11.8689C12.8065 10.9312 13.3333 9.65942 13.3333 8.33333C13.3333 7.00725 12.8065 5.73548 11.8688 4.7978C10.9311 3.86012 9.65937 3.33333 8.33329 3.33333ZM1.66663 8.33333C1.66678 7.27238 1.92014 6.22679 2.40566 5.28345C2.89118 4.34011 3.59483 3.52627 4.45813 2.90957C5.32143 2.29287 6.31946 1.89111 7.36925 1.73769C8.41905 1.58427 9.49031 1.68362 10.494 2.02748C11.4977 2.37134 12.4048 2.94978 13.14 3.71472C13.8751 4.47967 14.4171 5.40903 14.7209 6.42556C15.0246 7.4421 15.0814 8.51645 14.8864 9.55934C14.6915 10.6022 14.2504 11.5835 13.6 12.4217L18.0891 16.9108C18.2409 17.068 18.3249 17.2785 18.323 17.497C18.3211 17.7155 18.2335 17.9245 18.079 18.079C17.9245 18.2335 17.7155 18.3212 17.497 18.3231C17.2785 18.325 17.068 18.241 16.9108 18.0892L12.4216 13.6C11.4362 14.3651 10.2558 14.8383 9.01476 14.9658C7.77372 15.0933 6.52178 14.8701 5.40133 14.3214C4.28088 13.7727 3.33687 12.9206 2.67665 11.8621C2.01643 10.8035 1.66649 9.58092 1.66663 8.33333Z" fill="#2E2E2E" />
           </svg>
         </div>
@@ -40,10 +40,10 @@
     </div>
   </header>
 
-  <main class="hero-bg" id="home">
-    <h1 class="titulo-b c10">Fale Conosco</h1>
+  <main class="contato-bg">
+    <h1 class="titulo-b c11">Fale Conosco</h1>
     <div class="contato container">
-      <section class="contato-dados">
+      <section class="contato-dados shadow">
         <h2 class="texto-2b n2">Atendimento Personalizado!</h2>
         <address class="contato-meios texto c11">
           <a href="tel:+5561000000000" class="telefone">
@@ -74,7 +74,7 @@
           </div>
         </div>
       </section>
-      <section class="contato-form">
+      <section class="contato-form shadow">
         <form action="#">
           <div>
             <Label for="nome">Nome</Label>
@@ -94,6 +94,11 @@
     </div>
   </main>
 
+  <footer class="footer-bg">
+    <div class="footer container">
+      <p class="texto-b c9">&copy; Todos os direitos reservardos.</p>
+    <div>
+  </footer>
   <script src="/_js/menu-scroll.js"></script>
   <script src="/_js/menu-mobile.js"></script>
   <script src="/_js/equipe.js"></script>
