--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
       <h1 class="titulo-b cp1">Conheça a #1Bit</h1>
       <p class="texto-2 n2">A UmBitCriativo é uma agência de marketing digital com mais de 20 anos de experiência no mercado de comunicação.</p>
       <ul class="texto-b n2 sobre-numeros">
-        <li><span class="texto-2">+50</span> Clientes Atendidos</li>
-        <li><span class="texto-2">+100</span> IDs Criadas</li>
-        <li><span class="texto-2">+150</span> Dites Desenvolvidas</li>
-        <li><span class="texto-2">+15</span> Contas Gerenciadas</li>
+        <li><span class="texto-2" data-counter="50">0</span> Clientes Atendidos</li>
+        <li><span class="texto-2" data-counter="100">0</span> IDs Criadas</li>
+        <li><span class="texto-2" data-counter="150">0</span> Sites Desenvolvidas</li>
+        <li><span class="texto-2" data-counter="15">0</span> Contas Gerenciadas</li>
       </ul>
     </div>
   </article>
@@ -70,7 +70,7 @@
       <ul class="servicos-lista">
         <li class="servicos-item">
           <h2 class="subtitulo cp2">Web Design</h2>
-          <svg width="28" height="28" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg width="28" height="28" viewBox="0 0 36 36" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M14.4168 32.2032L19.2168 3.4032L21.5832 3.7968L16.7832 32.5968L14.4168 32.2032ZM12.4968 10.8L5.2968 18L12.4968 25.2L10.8 26.8968L1.9032 18L10.8 9.1032L12.4968 10.8ZM25.2 9.1032L34.0968 18L25.2 26.8968L23.5032 25.2L30.7032 18L23.5032 10.8L25.2 9.1032Z" fill="#FE1E98"/>
           </svg>
           <p class="texto">Desenvolvimento de sites profissionais, ecommerces, blogs e landing pages. <span class="texto-b cp1-b">Projetos modernos e responsivos!</span></p>
@@ -197,6 +197,17 @@
         <li class="team-item">
           <a href="#">
             <div class="team-txt">
+              <span class="texto c9">Copywryter</span>
+              <h2 class="texto-b n2">César Cavalcante</h2>
+            </div>
+          </a>
+          <div class="team-img">
+            <img src="/_img/team-person.jpg" alt="Franciel Ferreira Web Designer">
+          </div>
+        </li>
+        <li class="team-item">
+          <a href="#">
+            <div class="team-txt">
               <span class="texto c9">Web Designer</span>
               <h2 class="texto-b n2">Franciel Ferreira</h2>
             </div>
@@ -209,7 +220,7 @@
           <a href="#">
             <div class="team-txt">
               <span class="texto c9">Designer Gráfico</span>
-              <h2 class="texto-b n2">Lucas Almeida</h2>
+              <h2 class="texto-b n2">Lucas Sant'Ana</h2>
             </div>
           </a>
           <div class="team-img">
@@ -227,103 +238,37 @@
             <img src="/_img/team-person.jpg" alt="Franciel Ferreira Web Designer">
           </div>
         </li>
-        <li class="team-item">
-          <a href="#">
-            <div class="team-txt">
-              <span class="texto c9">Copywryter</span>
-              <h2 class="texto-b n2">César Cavalcante</h2>
-            </div>
-          </a>
-          <div class="team-img">
-            <img src="/_img/team-person.jpg" alt="Franciel Ferreira Web Designer">
-          </div>
-        </li>
       </ul>
     </div>
   </article>
 
-  <section class="parceiros-bg" id="clientes" aria-label="Nossos parceiros">
-    <ul class="parceiros-list">
-      <li class="parceiros-item">
+  <article class="cliente-bg" id="clientes">
+    <h1 class="titulo-b cp1-b">Quem já confia em nosso trabalho!</h1>
+    <ul class="cliente-list">
+      <li class="cliente-item">
         <img src="/_img/logo-um-bit-criativo.svg" alt="Logo">
       </li>
-      <li class="parceiros-item">
+      <li class="cliente-item">
         <img src="/_img/logo-um-bit-criativo.svg" alt="Logo">
       </li>
-      <li class="parceiros-item">
+      <li class="cliente-item">
         <img src="/_img/logo-um-bit-criativo.svg" alt="Logo">
       </li>
-      <li class="parceiros-item">
+      <li class="cliente-item">
         <img src="/_img/logo-um-bit-criativo.svg" alt="Logo">
       </li>
-      <li class="parceiros-item">
+      <li class="cliente-item">
         <img src="/_img/logo-um-bit-criativo.svg" alt="Logo">
       </li>
-      <li class="parceiros-item">
+      <li class="cliente-item">
         <img src="/_img/logo-um-bit-criativo.svg" alt="Logo">
       </li>
     </ul>
-  </section>
-
-  <article class="contato-bg" id="contato">
-    <h1 class="titulo-b c10">Fale Conosco</h1>
-    <div class="contato container">
-      <section class="contato-dados">
-        <h2 class="texto-2b n2">Atendimento Personalizado!</h2>
-        <address class="contato-meios texto c11">            
-          <a href="tel:+5561000000000" class="telefone">
-            <svg width="24" height="24" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M1.20001 10.8001L18 20.4001L34.8 10.8001H1.20001ZM3.60001 3.6001H32.4C33.0365 3.6001 33.647 3.85295 34.0971 4.30304C34.5472 4.75313 34.8 5.36358 34.8 6.0001V30.0001C34.8 30.6366 34.5472 31.2471 34.0971 31.6972C33.647 32.1472 33.0365 32.4001 32.4 32.4001H3.60001C2.96349 32.4001 2.35304 32.1472 1.90296 31.6972C1.45287 31.2471 1.20001 30.6366 1.20001 30.0001V6.0001C1.20001 5.36358 1.45287 4.75313 1.90296 4.30304C2.35304 3.85295 2.96349 3.6001 3.60001 3.6001V3.6001Z" stroke="currentColor" stroke-width="2"/>
-            </svg>
-            (61) 0 0000-0000
-          </a>            
-          <a href="mailto:contato@umbitcriativo.com.br" target="_blank" class="email">
-            <svg width="24" height="24" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M11.328 1.2002H6.00001C4.72697 1.2002 3.50607 1.70591 2.6059 2.60608C1.70573 3.50626 1.20001 4.72716 1.20001 6.0002V10.8002C1.20001 24.0554 11.9448 34.8002 25.2 34.8002H30C31.2731 34.8002 32.494 34.2945 33.3941 33.3943C34.2943 32.4941 34.8 31.2732 34.8 30.0002V26.6834C34.7998 26.2378 34.6755 25.8011 34.4411 25.4221C34.2067 25.0432 33.8714 24.737 33.4728 24.5378L27.6744 21.6386C27.3669 21.4848 27.0299 21.3988 26.6862 21.3866C26.3426 21.3743 26.0003 21.4361 25.6826 21.5676C25.3649 21.6991 25.0792 21.8974 24.8448 22.149C24.6104 22.4006 24.4328 22.6996 24.324 23.0258L23.6112 25.169C23.3875 25.8404 22.9262 26.4071 22.3141 26.7624C21.702 27.1177 20.9812 27.2373 20.2872 27.0986C17.4778 26.5364 14.8977 25.1551 12.872 23.129C10.8463 21.1029 9.46567 18.5225 8.90401 15.713C8.76535 15.019 8.88491 14.2982 9.24023 13.6861C9.59555 13.074 10.1622 12.6128 10.8336 12.389L13.4928 11.501C14.0658 11.3098 14.5457 10.9096 14.8367 10.3802C15.1276 9.85085 15.2082 9.23121 15.0624 8.645L13.656 3.017C13.526 2.498 13.2263 2.03734 12.8045 1.70817C12.3827 1.379 11.863 1.20021 11.328 1.2002V1.2002Z" stroke="currentColor" stroke-width="2"/>
-            </svg>
-            contato@umbitcriativo.com.br
-          </a>
-        </address>
-        <div class="contato-redes c11">
-          <h2 class="texto-2b n2">Acompanhe nossas redes sociais.</h2>
-          <div>
-            <a href="#" target="_blank">
-              <img src="/_img/icons/whatsapp.svg" alt="Whatsapp">
-            </a>
-            <a href="#" target="_blank">
-              <img src="/_img/icons/instagram.svg" alt="Instagram">
-            </a>
-            <a href="#" target="_blank">
-              <img src="/_img/icons/facebook.svg" alt="Facebook">
-            </a>
-          </div>
-        </div>
-      </section>
-      <section class="contato-form">
-        <form action="#">
-          <div>
-            <Label for="nome">Nome</Label>
-            <input type="text" id="nome" name="nome" placeholder="Nome Completo" required>
-          </div>
-          <div>
-            <Label for="email">Email</Label>
-            <input type="email" id="email" name="email" placeholder="nome@email.com" required>
-          </div>
-          <div>
-            <label for="mensagem">Mensagem</label>
-            <textarea rows="4" id="mensagem" name="mensagem" placeholder="Como podemos te ajudar?"></textarea>
-          </div>
-          <button class="botao">Enviar Mensagem</button>
-        </form>
-      </section>
-    </div>
   </article>
 
   <footer class="footer-bg">
-    <div class="footer container"><svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M10 0C4.47768 0 0 4.47768 0 10C0 15.5223 4.47768 20 10 20C15.5223 20 20 15.5223 20 10C20 4.47768 15.5223 0 10 0ZM10 18.3036C5.41518 18.3036 1.69643 14.5848 1.69643 10C1.69643 5.41518 5.41518 1.69643 10 1.69643C14.5848 1.69643 18.3036 5.41518 18.3036 10C18.3036 14.5848 14.5848 18.3036 10 18.3036ZM10.125 6.41295C11.308 6.41295 12.1116 7.16741 12.2009 8.27455C12.2076 8.3683 12.2857 8.43973 12.3795 8.43973H13.6451C13.7031 8.43973 13.75 8.39286 13.75 8.33482C13.75 6.39955 12.2232 5.04464 10.1183 5.04464C7.66518 5.04464 6.25 6.70089 6.25 9.4375V10.6049C6.25 13.3214 7.66518 14.9554 10.1183 14.9554C12.2165 14.9554 13.75 13.6429 13.75 11.7991C13.75 11.7411 13.7031 11.6942 13.6451 11.6942H12.3772C12.2835 11.6942 12.2076 11.7656 12.1987 11.8571C12.1049 12.8862 11.3036 13.5938 10.1228 13.5938C8.66518 13.5938 7.84375 12.5246 7.84375 10.6116V9.4375C7.84598 7.49554 8.66964 6.41295 10.125 6.41295Z" fill="white"/>
-      </svg>
-      <p class="texto-b c9">Todos os direitos reservardos.</p>
+    <div class="footer container">
+      <p class="texto-b c9">&copy; Todos os direitos reservardos.</p>
     <div>
   </footer>
 
