--- a/sobre.html
+++ b/sobre.html
@@ -48,13 +48,19 @@
           <h2 class="subtitulo c1">Acompanhe nossas redes sociais.</h2>
           <div>
             <a href="#" target="_blank">
-              <img src="/_img/icons/whatsapp.svg" alt="Whatsapp">
+              <svg width="62" height="62" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M31 0A31 31 0 0 0 4 46.3l-2.7 9.8a3.7 3.7 0 0 0 4.6 4.6l9.8-2.8A31 31 0 1 0 31 0Zm0 59.5c-5.1 0-10.2-1.4-14.6-4l-.6-.1h-.3l-10.3 3a1.2 1.2 0 0 1-1.5-1.6l3-10.3c0-.3 0-.7-.2-1a28.5 28.5 0 1 1 24.5 14Zm15.7-22.8-6.4-3.6a3.8 3.8 0 0 0-3.7 0l-4.3 2.6a14 14 0 0 1-6-6l2.5-4.2a3.8 3.8 0 0 0 0-3.8l-3.5-6.4a3.4 3.4 0 0 0-3-1.7 10 10 0 0 0-9.9 10 26 26 0 0 0 26 26 10 10 0 0 0 10-10 3.4 3.4 0 0 0-1.7-2.9Zm-8.2 10.4a23.6 23.6 0 0 1-23.6-23.6 7.4 7.4 0 0 1 7.4-7.4.9.9 0 0 1 .8.5l3.6 6.3a1.3 1.3 0 0 1 0 1.3L23.8 29a1.2 1.2 0 0 0 0 1.2 16 16 0 0 0 8 8 1.2 1.2 0 0 0 1.2 0l4.8-3a1.3 1.3 0 0 1 1.3 0l6.3 3.7a.9.9 0 0 1 .5.8 7.4 7.4 0 0 1-7.4 7.4Z" fill="var(--cp2)"/>
+              </svg>
             </a>
             <a href="#" target="_blank">
-              <img src="/_img/icons/instagram.svg" alt="Instagram">
+              <svg width="64" height="64" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M47 15h4-4ZM19 2h26a17 17 0 0 1 17 17v26a17 17 0 0 1-17 17H19A17 17 0 0 1 2 45V19A17 17 0 0 1 19 2Zm13 43a13 13 0 1 1 0-26 13 13 0 0 1 0 26Z" stroke="var(--cp2)" stroke-width="2.4"/>
+              </svg>
             </a>
             <a href="#" target="_blank">
-              <img src="/_img/icons/facebook.svg" alt="Facebook">
+              <svg width="64" height="64" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M32 62a30 30 0 1 1 0-60 30 30 0 0 1 0 60Zm0 0V28a9 9 0 0 1 9-9h2M21 36h22" stroke="var(--cp2)" stroke-width="2.4"/>
+              </svg>
             </a>
           </div>
         </div>
@@ -142,10 +148,8 @@
   </section>
 
   <footer class="footer-bg">
-    <div class="footer container"><svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M10 0C4.47768 0 0 4.47768 0 10C0 15.5223 4.47768 20 10 20C15.5223 20 20 15.5223 20 10C20 4.47768 15.5223 0 10 0ZM10 18.3036C5.41518 18.3036 1.69643 14.5848 1.69643 10C1.69643 5.41518 5.41518 1.69643 10 1.69643C14.5848 1.69643 18.3036 5.41518 18.3036 10C18.3036 14.5848 14.5848 18.3036 10 18.3036ZM10.125 6.41295C11.308 6.41295 12.1116 7.16741 12.2009 8.27455C12.2076 8.3683 12.2857 8.43973 12.3795 8.43973H13.6451C13.7031 8.43973 13.75 8.39286 13.75 8.33482C13.75 6.39955 12.2232 5.04464 10.1183 5.04464C7.66518 5.04464 6.25 6.70089 6.25 9.4375V10.6049C6.25 13.3214 7.66518 14.9554 10.1183 14.9554C12.2165 14.9554 13.75 13.6429 13.75 11.7991C13.75 11.7411 13.7031 11.6942 13.6451 11.6942H12.3772C12.2835 11.6942 12.2076 11.7656 12.1987 11.8571C12.1049 12.8862 11.3036 13.5938 10.1228 13.5938C8.66518 13.5938 7.84375 12.5246 7.84375 10.6116V9.4375C7.84598 7.49554 8.66964 6.41295 10.125 6.41295Z" fill="white"/>
-      </svg>
-      <p class="texto-b c9">Todos os direitos reservardos.</p>
+    <div class="footer container">
+      <p class="texto-b c9">&copy; Todos os direitos reservardos.</p>
     <div>
   </footer>
 
